# The-Crab

./: README.md
petricor_sim-master/: README.md
petricor_sim-master/src/platform_description/: CMakeLists.txt  package.xml
petricor_sim-master/src/platform_description/config/: combined.yaml  joint_names_platform.yaml
petricor_sim-master/src/platform_description/launch/: combined_spawn.launch.py  spawn_platform_ros2.launch.py
petricor_sim-master/src/platform_description/meshes/: base_link.STL  wheel_BL.STL  wheel_BR.STL  wheel_FL.STL  wheel_FR.STL
petricor_sim-master/src/platform_description/src/: gPointData.txt  pos_pub.py
petricor_sim-master/src/platform_description/urdf/: petricor_platform.urdf  petricor_platform.xacro  petricor_platform_arm.xacro
petricor_sim-master/src/platform_description/worlds/: petricor_basic.world
petricor_sim-master/src/simple_arm/: CMakeLists.txt  inverse_kinematics_derivation.md  package.xml
petricor_sim-master/src/simple_arm/config/: joint_names_Simple_arm.yaml
petricor_sim-master/src/simple_arm/launch/: display.launch  gazebo.launch  spawn_simple_arm.launch.py
petricor_sim-master/src/simple_arm/meshes/: EE_link.STL  arm_base_link.STL  left_elbw_link.STL  left_shldr_link.STL  right_elbw_link.STL  right_shldr_link.STL  z_link.STL
petricor_sim-master/src/simple_arm/src/: arm_control.py  arm_control_review_me.py  arm_notes.md
petricor_sim-master/src/simple_arm/urdf/: Simple_arm.csv  Simple_arm.urdf  Simple_arm.xacro  dual_scara_arm.xacro
