<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_arm</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="iseslar@sandia.gov">plume_hunter</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>gazebo</depend> 
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/urdf:${prefix}/meshes"/>
    <gazebo_ros gazebo_media_path="${prefix}/worlds"/>
  </export>
</package>

